tests/baselines/reference/parserAccessors10.errors.txt
tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors10.ts(2,3): error TS1184: Modifiers cannot appear here.


==== tests/cases/conformance/parser/ecmascript5/Accessors/parserAccessors10.ts (1 errors) ====
    var v = {
      public get foo() { }
      ~~~~~~
!!! error TS1184: Modifiers cannot appear here.
    };